--- a/vignettes/equ_mda_run.Rmd
+++ b/vignettes/equ_mda_run.Rmd
@@ -224,8 +224,11 @@ pars = make_age_contact_rate_array(pars, scenario, input_ages, input_contact_rat
 ```
 ```input_ages``` specifies the age groups which we are specifying the contact rates for. ```input_contact_rate``` are the chosen contact rates for the age groups specified. Having a 4 in the in the first position means that individuals from the ages of 0 to 4 will have the contact rate given by the first entry in ```input_contact_rate```. From 5 to the next specified age, individuals in this age range will have the 2nd specified contact rate and so on. Here the contact rates are normalized so that the sum of the contact rate array is 1, though this isn't necessary. The 4th line here is where the contact rates are actually updated in the parameters object.
 
-
-
+We can also update individual parameters of the simulation using the ```update_parameters_individually``` function. This is usead as followed:
+```{r update_pars}
+update_parameters_individually(pars, name = "max_fecundity", value = 0.32)
+```
+where the ```name``` input must exactly match a parameter name in the ```Parameter``` variable and ```value``` is the updated parameter value. This can be used to update the global contact rate, which could be used if we wanted to simulate a WASH intervention or the building or upgrading of latrines.
 
 
 
