--- a/vignettes/equ_mda_run.Rmd
+++ b/vignettes/equ_mda_run.Rmd
@@ -156,6 +156,9 @@ sac_heavy_burden = d[[2]]
 times = d[[3]]
 ```
 
+
+
+
 ``` {r plot, echo = FALSE , fig.dim = c(8, 6)}
 plot(times, sac_burden, type = 'l', col = rgb(110/255, 99/255, 252/255), bty = 'n',
      ylim = c(0, max(sac_burden)), lwd = 2, xlab = "year", ylab = "SAC prevalence")
@@ -228,7 +231,7 @@ pars = make_age_contact_rate_array(pars, scenario, input_ages, input_contact_rat
 ```
 ```input_ages``` specifies the age groups which we are specifying the contact rates for. ```input_contact_rate``` are the chosen contact rates for the age groups specified. Having a 4 in the in the first position means that individuals from the ages of 0 to 4 will have the contact rate given by the first entry in ```input_contact_rate```. From 5 to the next specified age, individuals in this age range will have the 2nd specified contact rate and so on. Here the contact rates are normalized so that the sum of the contact rate array is 1, though this isn't necessary. The 4th line here is where the contact rates are actually updated in the parameters object.
 
-We can also update individual parameters of the simulation using the ```update_parameters_individually``` function. This is usead as followed:
+We can also update individual parameters of the simulation using the ```update_parameters_individually``` function. This is used as follows:
 ```{r update_pars}
 update_parameters_individually(pars, name = "max_fecundity", value = 0.32)
 ```
