--- a/vignettes/equ_mda_run.Rmd
+++ b/vignettes/equ_mda_run.Rmd
@@ -201,7 +201,7 @@ pars = make_age_contact_rate_array(pars, scenario, input_ages, input_contact_rat
 
 We can also update individual parameters of the simulation using the ```update_parameters_individually``` function. This is used as follows:
 ```{r update_pars}
-update_parameters_individually(pars, name = "max_fecundity", value = 123123132)
+update_parameters_individually(pars, name = "max_fecundity", value = 5)
 ```
 where the ```name``` input must exactly match a parameter name in the ```Parameter``` variable and ```value``` is the updated parameter value. This can be used to update the global contact rate, which could be used if we wanted to simulate a WASH intervention or the building or upgrading of latrines.
 
