update parameters to include prod of max fec and contact rate

--- a/vignettes/equ_mda_run.Rmd
+++ b/vignettes/equ_mda_run.Rmd
@@ -45,7 +45,9 @@ initial_miracidia_days = round(miracidia_maturity/time_step)
 init_env_cercariae = 100000*N/1000
 worm_stages = as.integer(1)
 contact_rate = 0.1
+max_fec_contact_rate_product = 1/15
 max_fecundity = 0.34  # for S. mansoni [Toor et al JID paper SI]
+contact_rate = max_fec_contact_rate_product / max_fecundity
 #max_fecundity = 0.3  # for S. haematobium [Toor et al JID paper SI]
 age_contact_rates = c(0.032, 0.610, 1, 0.06)
 ages_for_contacts = c(4, 9, 15, 100)
